--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -17,6 +17,8 @@
     background-position: center;
     height: 40rem;
     width: 100%;
+    position: relative;
+    overflow: hidden;
 
     &:before,
     &:after {
